syntax = "proto3";  // Use Protocol Buffers version 3

package orderbook;  // Define the package name

// The Order message defines the fields for an order
message Order {
  required string uid = 1;
  enum Side {
    BUY = 0;
    SELL = 1;
  }
  required Side side = 2;
  required string symbol = 3;
  required double price = 4;
  required double quantity = 5;
  required string order_type = 6;
  required string hash = 7;
}

message CancelOrder {
  required string uid = 1;
  required string orderId =2;
   enum Side {
    BUY = 0;
    SELL = 1;
  };
  required Side side = 3;
  required string symbol = 4;
  required string price = 5;
}
